syntax = "proto3";
package client_relay;

import "error.proto";

option go_package = "github.com/connet-dev/connet/proto/pbclientrelay";

message AuthenticateReq {
  bytes authentication = 1;
  string metadata = 2;
  string build_version = 3;
}

message AuthenticateResp {
  error.Error error = 1;
}
